Progress on the game board

--- a/Dimesoft.Simon.Domain.Tests/Dimesoft.Simon.Domain.Tests.csproj
+++ b/Dimesoft.Simon.Domain.Tests/Dimesoft.Simon.Domain.Tests.csproj
@@ -6,14 +6,15 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{24F7D74C-54E1-4907-8C33-FD75150E813F}</ProjectGuid>
+    <ProjectGuid>{45F13937-EB1C-419F-9558-5614474C5183}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dimesoft.Simon.Domain</RootNamespace>
-    <AssemblyName>Dimesoft.Simon.Domain</AssemblyName>
+    <RootNamespace>Dimesoft.Simon.Domain.Tests</RootNamespace>
+    <AssemblyName>Dimesoft.Simon.Domain.Tests</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{BC8A1FFA-BEE3-4634-8014-F334798102B3};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <PackageCertificateKeyFile>Dimesoft.Simon.Domain.Tests_TemporaryKey.pfx</PackageCertificateKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -98,17 +99,47 @@
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <AppXPackage>True</AppXPackage>
+    <AppxPackageIncludePrivateSymbols>true</AppxPackageIncludePrivateSymbols>
+  </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <!--A reference to the entire .Net Framework and Windows SDK are automatically included-->
+    <SDKReference Include="MSTestFramework, Version=11.0" />
+    <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Engine\GameBoard.cs" />
-    <Compile Include="Engine\MoveGenerator.cs" />
-    <Compile Include="Engine\MoveManager.cs" />
-    <Compile Include="Model\Enums.cs" />
-    <Compile Include="Model\GameLevel.cs" />
-    <Compile Include="Model\Player.cs" />
+    <Compile Include="Engine\GameBoardTests.cs" />
+    <Compile Include="Engine\MoveGeneratorTests.cs" />
+    <Compile Include="Engine\MoveManagerTests.cs" />
+    <Compile Include="Model\GameLevelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <AppxManifest Include="Package.appxmanifest">
+      <SubType>Designer</SubType>
+    </AppxManifest>
+    <None Include="Dimesoft.Simon.Domain.Tests_TemporaryKey.pfx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\UnitTestLogo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\UnitTestSmallLogo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\UnitTestSplashScreen.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\UnitTestStoreLogo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dimesoft.Simon.Domain\Dimesoft.Simon.Domain.csproj">
+      <Project>{24f7d74c-54e1-4907-8c33-fd75150e813f}</Project>
+      <Name>Dimesoft.Simon.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
@@ -117,7 +148,7 @@
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
-  </Target>
+  </Target>  
   <Target Name="AfterBuild">
   </Target>
   -->
