--- a/Dimesoft.Simon.Client/Dimesoft.Simon.Client.csproj
+++ b/Dimesoft.Simon.Client/Dimesoft.Simon.Client.csproj
@@ -139,8 +139,12 @@
     <Content Include="Assets\Audio\TopLeftButton.mp3" />
     <Content Include="Assets\Audio\TopRightButton.mp3" />
     <Content Include="Assets\Logo.png" />
-    <Content Include="Assets\RadialGradient.png" />
-    <Content Include="Assets\SmallLogo.png" />
+    <Content Include="Assets\RadialGradient.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\SmallLogo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\SplashScreen.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\LightGray.png" />
