--- a/Dimesoft.Simon.Client/Dimesoft.Simon.Client.csproj
+++ b/Dimesoft.Simon.Client/Dimesoft.Simon.Client.csproj
@@ -147,6 +147,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\SplashScreen.png" />
+    <Content Include="Assets\spunaluminum.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\LightGray.png" />
     <Content Include="Assets\MediumGray.png" />
